--- a/src/App.css
+++ b/src/App.css
@@ -1,196 +1,129 @@
-.App{
-  min-height: 100vh;
+.App {
+  max-width: 1280px;
+  margin: auto;
+  padding: 0px 10px;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  height: 70px;
+  align-items: center;
   max-width: 1200px;
   margin: auto;
-  padding: 10px 10px;
-}
-
-header{
-  min-height: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 15px;
-  margin-bottom: 70px;
-  background-color: #FFFFFF;
-  border-radius: 5px;
-  box-shadow: var(--box-shadow);
-}
-
-header .logo{
-  display: flex;
-  align-items: center;
-}
-
-header .logo img{
-  max-width: 40px;
-  cursor: pointer;
-}
-
-header .logo span{
-  font-size: 22px;
-  margin-left: 7px;
-  cursor: pointer;
-  color: #525252;
-}
-
-header .themeSelector span{
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-  display: inline-block;
-  margin-left: 5px;
-  cursor: pointer;
-  border: 1px solid #dfdfdf;
-}
-
-header .themeSelector .activeTheme{
-  height: 30px;
-  width: 30px;
-}
-
-.addTask {
-  padding: 20px 15px;
-  border-radius: 5px;
-  background-color: #FFFFFF;
-  max-width: 500px;
-  margin: 20px auto;
-  box-shadow: var(--box-shadow);
-}
-
-.addTask form{
-  display: flex;
-  gap: 7px;
-}
-
-.addTask form input{
-  flex-grow: 1;
-  padding: 5px 5px;
-  border: 1px solid #eaeaea;
-  border-radius: 5px;
+  border-bottom: 1px solid #EEEEEE;
   font-size: 18px;
+  padding: 0px 10px;
 }
 
-.addTask form input:focus{
-  outline: 0.5px solid #eaeaea;
+.navigation .link{
+  padding: 10px;
 }
 
-.addTask form button{
-  background-color: #03ba5c;
-  color: #FFFFFF;
-  border: none;
-  padding: 5px 20px;
+.navigation .link.active{
+  background-color: #EEEEEE;
   border-radius: 5px;
-  cursor: pointer;
-  font-size: 18px;
 }
 
-.addTask form button:hover{
-  background-color: #03b056;
+@media screen and (max-width: 680px) {
+  .navigation{
+      display: none;
+  }
 }
 
-.showTask{
-  padding: 20px 15px;
-  border-radius: 5px;
-  background-color: #FFFFFF;
-  margin: 20px auto;
-  box-shadow: var(--box-shadow);
-}
-
-.showTask div.head{
-  padding: 10px 0px 20px 0px;
-  border-bottom: 1px solid #dfdfdf;
+.productList{
   display: flex;
-  align-items: center;
-}
-
-.showTask div.head div{
-  flex-grow: 1;
-}
-
-.showTask .title{
-  font-size: 18px;
-  font-weight: 600;
-  user-select: none;
-}
-
-.showTask .count{
-  background-color: #dfdfdf;
-  color: #525252;
-  padding: 5px 10px;
-  border-radius: 50%;
-  margin-left: 10px;
-  user-select: none;
-}
-
-.showTask .clearAll{
-  background-color: #0f6af3;
-  color: #FFFFFF;
-  padding: 5px 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  border: 0px;
-  font-size: 16px;
-}
-
-.showTask .clearAll:hover{
-  background-color: #1061db;
-}
-
-.showTask ul{
-  margin: 30px 5px 20px 5px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
   flex-wrap: wrap;
-  gap: 15px;
+  justify-content: space-around;
+  margin: 30px 0px;
 }
 
-.showTask li{
-  padding: 15px 10px;
-  border-bottom: 1px solid #e5e5e5;
-  display: flex;
-  gap: 5px;
+.productCard{
   width: 350px;
-  box-shadow: var(--box-shadow);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   border-radius: 5px;
-  border-left: 5px solid #1365dfaf;
-}
-
-.showTask li:hover{
-  background-color: #f8f8f8;
-}
-
-.showTask li p{
-  flex-grow: 1;
+  margin: 10px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
-.showTask li .name{
+.productCard img{
+  max-width: 100%;
+  height: 250px;
+  margin: 10px 0px;
+}
+
+.productCard .name{
+  margin: 10px 0px;
+}
+
+.productCard p{
   font-size: 18px;
-  padding-bottom: 5px;
+  font-weight: 500;
 }
 
-.showTask li .time{
-  font-size: 12px;
-  color: #737373;
+.productCard .action{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0px;
 }
 
-.showTask i.bi-pencil-square{
-  font-size: 18px;
-  color: #1363DF;
+.productCard button{
+  border: 0px;
+  border-radius: 5px;
+  font-size: 16px;
+  color: #FFFFFF;
+  background-color: #1C59AE;
+  padding: 7px 10px;
   cursor: pointer;
+  max-width: 150px;
 }
 
-.showTask i.bi-trash{
+.productCard button:hover{
+  background-color: #103f80;
+}
+
+.productDetail{
+  display: flex;
+  justify-content: space-between;
+}
+
+.productDetail .visual{
+  width: 50%;
+}
+
+.productDetail .visual img{
+  width: 100%;
+}
+
+.productDetail .info{
+  max-width: 50%;
+}
+
+.productDetail .info .name{
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.productDetail .info .description{
   font-size: 18px;
-  color: #D82148;
-  cursor: pointer;
 }
 
-@media only screen and (max-width: 800px) {
-  .showTask li{
+@media screen and (max-width: 500px) {
+  .productDetail .visual{
     width: 100%;
   }
+}
+
+footer{
+  max-width: 1200px;
+  margin: auto;
+  text-align: center;
+  padding: 20px;
+  height: 70px;
+  font-size: 18px;
+  border-top: 1px solid var(--theme-border);
 }
